@@ -64,6 +64,12 @@ templates:
           - file_poster_<<key>>.exists: false
             file_poster.exists: false
             value: <<url_poster>>
+      final_use:
+        conditions:
+          - use_<<key>>.exists: true
+            value: <<use_<<key>>>>
+          - use_all: false
+            value: false
     default:
       collection_section: "00"
       key: <<mapping_name>>
@@ -110,6 +116,7 @@ templates:
       - delete_collections_named
       - schedule
     run_definition:
+      - <<final_use>>
       - <<use_<<key>>>>
       - <<allowed_libraries>>
     name_mapping: <<name_mapping>>
