@@ -2,6 +2,7 @@
 | Variable                                      | Description & Values                                                                                                                                                                                                                                                                                                                                                                               |
 |:----------------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | `language`                                    | **Description:** Set the language of Collection Names and Summaries<br>**Default:** `default`<br>**Values:** `default` (English), `fr` (French), or `de` (German)                                                                                                                                                                                                                                  | 
+| `use_all`                                     | **Description:** Turns off all Collections in a Defaults file.<br>**Values:** `false` to turn off the collection                                                                                                                                                                                                                                                                                   |
 | `use_<<key>>`<sup>1</sup>                     | **Description:** Turns off individual Collections in a Defaults file.<br>**Values:** `false` to turn off the collection                                                                                                                                                                                                                                                                            |
 | `name_<<key>>`<sup>1</sup>                    | **Description:** Changes the name of the specified key's collection.<br>**Values:** New Collection Name                                                                                                                                                                                                                                                                                            |
 | `summary_<<key>>`<sup>1</sup>                 | **Description:** Changes the summary of the specified key's collection.<br>**Values:** New Collection Summary                                                                                                                                                                                                                                                                                      |
